# embedded-ui-proxy

./: .gitignore  .mcp.json  AGENTS.md  README.md  TODO.md  pyproject.toml  run.py
.github/workflows/: ci.yml
src/: main.py
src/embedded_ui_proxy/: jsonrpc.py  main.py  monitor.py  proxy.py
test/: test_main.py
ui/: .oxlintrc.jsonc  biome.jsonc  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
ui-preact/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ui-preact/src/: main.tsx
ui-preact/src/components/: CustomChart.tsx  SqlQueryEditor.tsx  SystemMetrics.tsx  UPlotChart.tsx
ui-preact/src/hooks/: useContainerSize.ts
ui-preact/src/pages/: Dashboard.tsx
ui-preact/src/utils/: jsonrpc.ts  tooltipPlugin.ts
ui/src/: App.tsx
ui/src/components/: CustomChart.tsx  SqlQueryEditor.tsx  SystemMetrics.tsx  UPlotChart.tsx
ui/src/hooks/: useContainerSize.ts
ui/src/pages/: Dashboard.tsx
ui/src/utils/: jsonrpc.ts  tooltipPlugin.ts
