[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "embedded_ui_proxy"
version = "0.0.0"
description = "Embedded UI proxy with real-time metrics monitoring using DuckDB"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.14"

dependencies = ["aiohttp", "duckdb", "psutil"]

[project.urls]
Source = "https://github.com/voluntas/embedded-ui-proxy"

[project.scripts]
server = "embedded_ui_proxy.main:run_server"

[dependency-groups]
dev = [{ include-group = "test" }, { include-group = "lint" }]
test = ["pytest", "pytest-timeout", "pytest-aiohttp", "pytest-repeat"]
lint = ["ruff", "ty"]

[tool.uv]
package = true

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.pytest.ini_options]
testpaths = ["test"]
